# cpp-searchlib

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md
include/: searchlib.h
scope/: CMakeLists.txt  main.cpp
src/: indexer.cpp  indexing.cpp  invertedindex.cpp  plain_utf8_tokenizer.cpp  query.cpp  search.cpp  searchlib.cpp  textrange.cpp  tokenizer.cpp  utils.cpp  utils.h
test/: CMakeLists.txt  split_to_chapters.py  t_kjv_chapters.tsv  test.cc  test_kjv.cc  test_kjv_chapters.cc  test_utils.h
